--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://understrap.com",
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "4.3.1",
     "browser-sync": "^2.18.6",
     "del": "^2.2.2",
     "font-awesome": "^4.7.0",
@@ -48,5 +48,5 @@
     "undescores-for-npm": "^1.0.0",
     "understrap": "^0.5.4"
   }
-    
+
 }
